--- a/style.css
+++ b/style.css
@@ -40,9 +40,8 @@ div[id^="add-new-content"]:target {
   position: fixed;
   bottom: 0;
   width: 85%;
- 
 }
 
 #list-content {
-  margin-bottom: 100px
+  margin-bottom: 100px;
 }
