--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   position: relative;
 }
 
-.font  {
+.font {
   font-family: "Zen Loop", cursive;
   font-weight: 600;
 }
@@ -41,7 +41,7 @@ div[id^="add-new-content"]:target {
 
 .contact a {
   text-decoration: none;
-  color: #000
+  color: #000;
 }
 
 .contact li:nth-child(2n) {
