--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,49 @@
-#img {
-  display: block;
-  margin: auto;
-  height: 128px;
-  width: 128px;
-  padding: 2rem;
+body {
+  position: relative;
 }
 
-#canvas {
+.font {
+  font-family: "Zen Loop", cursive;
+  font-weight: 600;
+}
+
+li {
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+
+li:nth-child(2n) {
+  background: #ccc;
+}
+
+div[id^="list-content"],
+div[id^="contact-content"],
+div[id^="add-new-content"] {
+  display: none;
+}
+
+div[id^="list-content"]:target,
+div[id^="contact-content"]:target,
+div[id^="add-new-content"]:target {
   display: block;
-  margin: 2rem auto;
-  width: 540px;
-  height: 540px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 85%;
+}
+
+#list-content {
+  margin-bottom: 150px;
+}
+
+.contact a {
+  text-decoration: none;
+  color: #000;
+}
+
+.contact li:nth-child(2n) {
+  background: #fff;
 }
